Fixed navbar's z-index

--- a/starter-code/css/spotify.sass
+++ b/starter-code/css/spotify.sass
@@ -18,6 +18,7 @@ nav
   justify-content: space-between
   align-items: center
   background: white
+  z-index: 2
 
   .left, .right
     display: inline-block
